# scam

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini
data/: test_frag.glsl  test_vert.glsl
src/: Coin.cpp  Coin.h  Dashboard.cpp  Dashboard.h  FrameCounter.cpp  FrameCounter.h  Gameloop.cpp  Gameloop.h  Main.cpp  Prelude.h  Shader.cpp  Shader.h  SoundSystem.cpp  SoundSystem.h  Texture.cpp  Texture.h
src/sim/: Coins.h  Event.cpp  Event.h  Item.cpp  Item.h  Modifier.cpp  Modifier.h  ScamInterface.h  Simulation.cpp  Simulation.h
workspace/: coins.aseprite
